2002-01-03 Christoph Cullmann <cullmann@kde.org>
  * kate app and kwrite app now use the katepart via libloader and link only
    to the kateinterfaces (which will soon be splitted into katepartinterfaces
    and kateinterfaces
  * new framework for the configpages of the katepart accessible through the 
    interfaces
  * KSpell works again ;) my god, what a buggy thingy

2001-12-01 Christoph Cullmann <cullmann@kde.org>
  * speedup for insert/removeText/Line
  * new editStart/editEnd/editAddUndo functions to make the undo/redo + update
     after edit function calls easier to understand an use in katedocument.*

2001-11-30 Joseph Wenninger <jowenn@kde.org>
  * I hopefully fixed the CSS highlighting finally. It used
     deprecated syntax and there was a bug in the highlighting code,
     for handling weakDeliminiators. Who renamed them, once they where
     called weakDelimiters, which I think is the correct pronounciation.

2001-11-29 Joseph Wenninger <jowenn@kde.org>
  * KWrite/Kate use different font settings for printing and viewing now
  * Fixed a small crash in my kdevelop->kate port of the codecompletion interface

2001-11-26 Christoph Cullmann <cullmann@kde.org>
  * backspace bug fixed
  * more cleanups in doc/view

2001-11-24 Christoph Cullmann <cullmann@kde.org>
  * the docID is now called documentNumber and is in the KTextEditor lib ;)
  * new print and mark interfaces ;)
  * bugfixes for some stuff in kateview/document.*
  * move more of the document stuff from the view to the document
    (old kwritedoc/view was very mixed, no real seperation, but that should be nearly done)

2001-11-17 Christoph Cullmann <cullmann@kde.org>
  * new selection code (bit buggy at the moment, but better than the old way
    of storing the selection in the attributes

2001-10-29 Joseph Wenninger <jowenn@kde.org>
  * Highlighting definitions support now #stay and #pop as context values
  * Some highlighting definitions ported
