@@ -25,7 +25,7 @@ Kate Team:
 
 KWrite Team:
 - Jochen Wilhelmy <digisnap@cs.tu-berlin.de>
-  (master of bugs ;)
+  (original author of kwrite in kde 1.x until kde 2.1)
 
 - Glen Parker <glenebob@nwlink.com>
   (undo history, kspell-integration)
