@@ -1,20 +1,26 @@
-                *** Kate version 2.0 ***
+                *** Kate ***
 Kate is a fast texteditor for the KDE destop with an Emacs-style document interface.
 I hope it works well and improves workspeed on many little textfiles. ;-)
 Our new buffer managment will allow it to open 50MB files ++ in less than 5 seconds
-(at least on my 400Mhz P2 ;)
+(at least on my 400Mhz P2 ;) It is thought as a more powerful replacement for the old
+KWrite app, which will still keep alive for the existing userbase and because it is
+just a lot smaller and therefor faster on launch than kate.
 
 Other programs which want to use the kate part should use it through the common
-KTextEditor interfaces in kdelibs.
+KTextEditor interfaces in kdelibs or through the kate::view/document interfaces.
 For Kate Plugins, Kate provides the Kate Interfaces, which allow deeper access
 to the Kate app and its features.
 
-Homepage: http://kate.sf.net
+Homepage: http://kate.sf.net (is shipping with kdebase)
 
 The Kate team
 
                 *** KWrite ***
-New KWrite app is using the Kate part ;-)
+The current KWrite app is based on the KWrite of kde 2.0 written by Jochen Wilhelmy
+but now it uses the kate part (which is based on the old kwrite doc/view stuff
+written by Jochen, too).
+
+Homepage: http://kate.sf.net (is shipping with kate/kdebase)
 
 Licensing:
 The Kate app + part and KWrite app are licensed under the GPL.
