@@ -28,13 +28,12 @@
 
 #include <qobject.h>
 #include <kurl.h>
-#include <currentdocprovider.h>
 
 namespace Kate
 {
 /** This interface provides access to the Kate Document Manager.
 */
-class DocManager : public QObject, public KateCurrentDocProvider
+class DocManager : public QObject
 {
   Q_OBJECT
 
