@@ -23,7 +23,6 @@
 #include "katehighlight.h"
 #include "katebuffer.h"
 #include "katetextline.h"
-#include "../interfaces/currentdocprovider.h"
 #include "../interfaces/document.h"
 
 #include <qobject.h>
@@ -379,6 +378,8 @@ class KateDocument : public Kate::Document
     Kate::ConfigPage *keysConfigPage (QWidget *);
     Kate::ConfigPage *kSpellConfigPage (QWidget *);
     Kate::ConfigPage *hlConfigPage (QWidget *);
+    
+    Kate::ActionMenu *hlActionMenu (const QString& text, QObject* parent = 0, const char* name = 0);
 
   protected:
     //
@@ -755,10 +756,6 @@ class KateDocument : public Kate::Document
     uint _configFlags;
     uint _searchFlags;
     SConfig s;
-
-    /* don't create too much actions, if the app developer knows how to do it :)  */
-   virtual void createPseudoStaticActionsFor(Kate::KateCurrentDocProvider *provider, QObject *coll);
-
 };
 
 #endif
