@@ -1441,7 +1441,7 @@ void KateView::setupActions()
       KStdAction::findPrev(this, SLOT(findPrev()), myDoc->actionCollection(), "find_prev");
       KStdAction::gotoLine(this, SLOT(gotoLine()), myDoc->actionCollection(), "goto_line" );
       new KAction(i18n("&Configure Editor..."), 0, myDoc, SLOT(configDialog()),myDoc->actionCollection(), "set_confdlg");
-      setHighlight = new KateViewHighlightAction(this,i18n("&Highlight Mode"),myDoc->actionCollection(),"set_highlight");
+      setHighlight = myDoc->hlActionMenu (i18n("&Highlight Mode"),myDoc->actionCollection(),"set_highlight");
       connect(new KateExportAction(this,i18n("&Export"),myDoc->actionCollection(),"file_export"),SIGNAL(exportAs(const QString&)),
       		myDoc, SLOT(exportAs(const QString&)));
       KStdAction::selectAll(myDoc, SLOT(selectAll()), myDoc->actionCollection(), "select_all");
@@ -1462,7 +1462,7 @@ void KateView::setupActions()
       KStdAction::findPrev(this, SLOT(findPrev()), actionCollection(), "edit_find_prev");
       KStdAction::gotoLine(this, SLOT(gotoLine()), actionCollection());
       new KAction(i18n("&Configure Editor..."), 0, myDoc, SLOT(configDialog()),actionCollection(), "set_confdlg");
-      setHighlight = new KateViewHighlightAction(this,i18n("&Highlight Mode"), actionCollection(), "set_highlight");
+      setHighlight = myDoc->hlActionMenu (i18n("&Highlight Mode"),actionCollection(),"set_highlight");
       connect(new KateExportAction(this,i18n("&Export"),actionCollection(),"file_export"),SIGNAL(exportAs(const QString&)),
       		myDoc, SLOT(exportAs(const QString&)));
       KStdAction::selectAll(myDoc, SLOT(selectAll()), actionCollection());
