@@ -1,3 +1,7 @@
+200-01-04 Christoph Cullmann <cullmann@kde.org>
+  * the search stuff in the katedocument is rewritten now, should work mostly,
+    only search for whole words is just a mess :(
+
 2002-01-03 Christoph Cullmann <cullmann@kde.org>
   * kate app and kwrite app now use the katepart via libloader and link only
     to the kateinterfaces (which will soon be splitted into katepartinterfaces
